# fhenn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  extract_translatable.sh  format_messages.sh  init_messages.sh  pyproject.toml  requirements.txt
app/: main.py
fhenn/: __init__.py  cli.py  constants.py  nn.py
fhenn/cli/: cnn.py  main.py  version.py
fhenn/locales/en/LC_MESSAGES/: messages.po
fhenn/locales/ja/LC_MESSAGES/: messages.po
fhenn/nn/: cnn2d.py  lenet5.py
