[tool.poetry]
name = "fhenn"
version = "0.1.1"
description = "Experiments with Fully Homomorphic Encryption (FHE) and neural networks."
authors = ["Anirban Basu <anirbanbasu@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.0"
tenseal = "^0.3.15"
numpy = "^2.2.0"
torch = "^2.5.1"
torchvision = "^0.20.1"
tqdm = "^4.67.1"

[tool.poetry.scripts]
fhenn = "fhenn.cli.main:app"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
